# ChangeLog for x11-libs/libXext
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXext/ChangeLog,v 1.107 2011/08/20 15:53:34 jer Exp $

  20 Aug 2011; Jeroen Roovers <jer@gentoo.org> libXext-1.3.0.ebuild:
  Stable for HPPA (bug #371857).

  30 Jul 2011; Raúl Porcel <armin76@gentoo.org> libXext-1.3.0.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #371857

  29 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> libXext-1.3.0.ebuild:
  ppc64 stable wrt #371857

  13 Jul 2011; Markus Meier <maekke@gentoo.org> libXext-1.3.0.ebuild:
  x86 stable, bug #371857

  28 Jun 2011; Brent Baude <ranger@gentoo.org> libXext-1.3.0.ebuild:
  Marking libXext-1.3.0 ppc stable for bug 371857

  26 Jun 2011; Markus Meier <maekke@gentoo.org> libXext-1.3.0.ebuild:
  arm stable, bug #371857

  23 Jun 2011; Markos Chandras <hwoarang@gentoo.org> libXext-1.3.0.ebuild:
  Stable on amd64 wrt bug #372333

*libXext-1.3.0 (07 May 2011)

  07 May 2011; Tomáš Chvátal <scarabeus@gentoo.org> +libXext-1.3.0.ebuild:
  Version bump to latest.

  14 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> libXext-1.2.0.ebuild:
  ppc stable wrt #344827, #354237

  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> libXext-1.2.0.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #344827

  31 Dec 2010; Jeroen Roovers <jer@gentoo.org> libXext-1.2.0.ebuild:
  Stable for HPPA (bug #344827).

  29 Dec 2010; Markus Meier <maekke@gentoo.org> libXext-1.2.0.ebuild:
  arm stable, bug #344827

  25 Dec 2010; Christian Faulhammer <fauli@gentoo.org> libXext-1.2.0.ebuild:
  x86 stable, bug 344827

  23 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> libXext-1.2.0.ebuild:
  amd64 stable wrt #344827

  19 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> libXext-1.2.0.ebuild:
  ppc64 stable wrt #344827

  20 Nov 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -libXext-1.1.2-r1.ebuild:
  old

*libXext-1.2.0 (28 Oct 2010)
