@@ -1,17 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX libXext-1.1.2-xhidden.patch 365 RMD160 60f5786fc0bd2e4e0b09d300240a947b2a405f4c SHA1 61f97a9d9242f2a8c74c99474716cc7bb5a73834 SHA256 7094e0271c3bdd382f1a3b35a9638fc0124f9de2374824557e0163a96549f056
 DIST libXext-1.2.0.tar.bz2 313332 RMD160 2d84b0f69ef9a84af7114da7bff6bfb559ebb4fc SHA1 090d7109c5fffde8a0063e10f22f3e2ec48cf19e SHA256 4aed3e211e41c47908c293515580e731c26048f61a1212bf0888d1f456de6ff7
 DIST libXext-1.3.0.tar.bz2 341172 RMD160 fc3bb37882945e3475a338cb83c89dae04eb75fe SHA1 0bf3708177b9320091ebc069e905c042c31d859d SHA256 e9daeb400855b9836e328500cec356b2769033174fc1b2be0df4a80f031debc0
 EBUILD libXext-1.2.0.ebuild 855 RMD160 003d5da59e6111441745ff44bcf84cc1811f5e5a SHA1 0f333066ebab5bcac62632b9e72d5f2460c2834e SHA256 bf83dcb91169827b943867f5be131ef4fd0c93f3b93a06ade1d6892486628299
-EBUILD libXext-1.3.0.ebuild 757 RMD160 23d83fd8ff19c4af55f8cc14a33f6522c0ecaddc SHA1 044ecb57ba28658950bb2b083c42223b16cbb16c SHA256 f6ccd257a6c8a398f7930d5d6cca014438d019918711676a31c316a539ea0ad3
-MISC ChangeLog 12607 RMD160 fde32d66121190be4c56926ae52c060dfc903380 SHA1 b250dbe6828d785752703b02b6911a539efafeed SHA256 80bf4e1bdf026975c5a41ad2c4697b035f53a6c832ce9dbd1d96dcfbc8270e6f
+EBUILD libXext-1.3.0.ebuild 777 RMD160 5f898a2115aeffce7f4858ab986a2c5b8f344295 SHA1 8a365183ceb5ed00b5f5aa73a6df3f0389696229 SHA256 9c4ebde594bdb3e79691a18c0d2679713955b9ff0bb7a6826031863627ddfa55
+MISC ChangeLog 12717 RMD160 36897a43d9ab9741aa52e0d6071f4230531b16ce SHA1 b7a5fe25fd5ede4fed25b70a65d8b7bdbf2b839f SHA256 216b079323d9ebdfa6d3aded265db36f7704bfa779198bfa8dec2bd2b7958560
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk5P2IQACgkQVWmRsqeSphM9OwCbBSIqK/j65PV5kr5zQ4x3KLYY
-JvkAnRi1UE/N8Vr9U8Nm6n8iUivTtpRk
-=RYsZ
+iQEcBAEBCAAGBQJOk0dmAAoJEMOx0zmdw4Z17dEH/jMwVXLfaCfRnwOQ7+y1sJsN
+7o52gFrjTFThFuDY949AQGvauRxoNJ0Du7n0HNbVdA7/T41ikqWTyvLWCxp+swlo
+pAStc69fqkRwp8G+Xgk3K+J2C/6KaDB1wWF27w6W5N4/gMn/ZJhHW61bivK+l7Gp
+2XpQAjGGmeOSbPnOoATxHp7s8FGf+/Bybhlq1nHOOqQ8aJp0x1V6yY6vGP76/5IL
+8fN2wnVWy7YaCvDwba9y5Z1sVK1y4CF2kjyfCKXAxuSj5FJUftEPCQ21PpN5c89H
+KKYx0CWKZ3Fx0P2yFX6BsGwXV8DXZwHySqET0ijCLbUXVPUOwqBegssnwTdUKao=
+=dFcV
 -----END PGP SIGNATURE-----
