@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXext
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXext/ChangeLog,v 1.107 2011/08/20 15:53:34 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXext/ChangeLog,v 1.108 2011/10/10 19:28:27 idl0r Exp $
+
+  10 Oct 2011; Christian Ruppert <idl0r@gentoo.org> libXext-1.3.0.ebuild:
+  Add missing xproto dependency.
 
   20 Aug 2011; Jeroen Roovers <jer@gentoo.org> libXext-1.3.0.ebuild:
   Stable for HPPA (bug #371857).
